<resources>
    <string name="app_name">知了．运动健康用户版</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="tel">请输入11位手机号码</string>
    <string name="password">6-20位字母、数字、符号</string>
    <string name="login">登   录</string>
    <string name="registration">注册</string>
    <string name="forget">忘记密码？</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="setPassword">设置密码</string>
    <string name="confirmPassword">确认密码</string>
    <string name="clickOk">点击注册表示已同意</string>
    <string name="servicesOrdinance">服务条款</string>
    <string name="tv_item_r_myorder1">挂号人:</string>
    <string name="tv_item_r_myorder3">预约的医生：</string>
    <string name="tv_item_r_myorder2">预约时间</string>
    <string name="enrolment">注  册</string>
    <string name="backLogin">返回登录</string>
    <string name="title_activity_match_sms">MatchSMSActivity</string>
    <string name="verification">获取验证码</string>
    <string name="next">下一步</string>
    <string name="title_activity_case_history">诊断记录</string>
    <string name="title_activity_video_record">VideoRecordActivity</string>
    <string name="title_activity_case_history_details">诊断记录</string>
    <string name="title_activity_doctor_visit">平台查看</string>
    <string name="bt_doctor_visit_chose1">未参与</string>
    <string name="bt_doctor_visit_chose2">已参与</string>
    <string name="title_activity_make">发起预约</string>
    <string name="title_activity_participation">参与</string>
    <string name="title_activity_look_over">查看</string>
    <string name="title_activity_submit_succeed">SubmitSucceedActivity</string>
    <string name="title_activity_evaluate">评价</string>
    <string name="title_activity_pay">PayActivity</string>
    <string name="title_activity_make_details">医生上门</string>
    <string name="title_activity_get_medicine">复诊拿药</string>
    <string name="bt_getmedicine_chose1">诊断中</string>
    <string name="bt_getmedicine_chose2">药方</string>
    <string name="bt_chose_people">确定</string>
    <string name="bt_message_list1">医院信息</string>
    <string name="bt_message_list2">系统消息</string>
    <string name="title_activity_select_doctor">SelectDoctorActivity</string>
    <string name="title_activity_gm__payment">Gm_PaymentActivity</string>
    <string name="title_activity_gm__submit_succeed">订单确认</string>
    <string name="title_activity_hosbital_introduce">HosbitalIntroduceActivity</string>
    <string name="title_activity_doctor_details">DoctorDetailsActivity</string>
    <string name="title_activity_departments_details">DepartmentsDetailsActivity</string>
    <string name="title_activity_hospital_lbs">HospitalLBSActivity</string>
    <string name="title_activity_message_list">MessageListActivity</string>
    <string name="title_activity_message_details">MessageDetailsActivity</string>
    <string name="title_activity_registration">RegistrationActivity</string>
    <string name="registrationTitle">预约挂号</string>
    <string name="registrationDetail">预约详情</string>
    <string name="tv_r_myorder">我的预约</string>
    <string name="registrationHintTitle">预约时请核对时间</string>
    <string name="registrationHintContext">本预约挂号属VIP快速挂号通道，需要提前三天进行预约挂号</string>
    <string name="contact_us">医院地址：四川省成都市一环路西一段132号\n联系电话：111111111111</string>
    <string name="submit">提交</string>
    <string name="doctor">预约挂号</string>
    <string name="departmentChoose">我的预约</string>
    <string name="title_activity_r__payment">R_PaymentActivity</string>
    <string name="rPaymentMyInformationNameTitle">姓名：</string>
    <string name="rPaymentMyInformationNameContext">張科</string>
    <string name="rPaymentMyInformationSexTitle">性別：</string>
    <string name="man">男</string>
    <string name="woman">女</string>
    <string name="rPaymentMyInformationTelTitle">电话：</string>
    <string name="telNunber">159********</string>
    <string name="titleId">身份证号：</string>
    <string name="contextId">5110021968072528XX</string>
    <string name="rPaymentDoctorInformationDepartmentTitle">预约医生：</string>
    <string name="rPaymentDoctorInformationDepartmentContext">骨科</string>
    <string name="doctorNameTitle">预约医师：</string>
    <string name="doctorNameContext">张世明</string>
    <string name="doctorNameAppellation">（主治医师）</string>
    <string name="doctorTimeTitle">预约时间：</string>
    <string name="cost">¥50</string>
    <string name="costTitle">挂号费用：</string>
    <string name="tvcosttitletv">手续费：　</string>
    <string name="tvcosttv">5元</string>
    <string name="payment">付款</string>
    <string name="title_activity_rehabilitation_tutorial">RehabilitationTutorialActivity</string>
    <string name="rehabilitationTutorial">康复教程</string>
    <string name="check">聊天记录</string>
    <string name="rehabilitationTutorialTitle">脱臼应急处理</string>
    <string name="time">2015年5月26日</string>
    <string name="tvTutorialTextContents">医院之家为您提供国内最完善最详尽的医院信息,比如男科医院、妇科医院、儿童医院、整形医院、中医医院、妇幼保健院、肿瘤医院、眼科医院等众多三甲医院</string>
    <string name="title_activity_player">PlayerActivity</string>
    <string name="times">（53）</string>
    <string name="videoIntroduce">视频简介</string>
    <string name="share">分享</string>
    <string name="collection">收藏</string>
    <string name="title_activity_image_text_tutorial">ImageTextTutorialActivity</string>
    <string name="imageTextTitle">图文文章内容</string>
    <string name="title_activity_sport_coaching">运动指导</string>
    <string name="title_activity_sport_person">选择教练</string>
    <string name="title_activity_sc__payment">订单确认</string>
    <string name="title_activity_dv__chose_people">选择就诊人</string>
    <string name="title_activity_dv__chose_people_dtailes">就诊人信息</string>
    <string name="title_activity_dv__chose_address">选择地址</string>
    <string name="ll_sport_chose1">选择区域</string>
    <string name="ll_sport_chose2">价格从高到低</string>
    <string name="ll_sport_chose3">价格从低到高</string>
    <string name="my">我的</string>
    <string name="main">知了.运动健康</string>
    <string name="prevention">治未病</string>
    <string name="title_activity_sc__pay_succeed">订单确认</string>
    <string name="tv_gm_submit_succeed">恭喜您已付款成功！</string>
    <string name="tv_gm_end_item">已付款</string>
    <string name="find">发现</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="center07">中心介绍</string>
    <string name="course03">康复教程</string>
    <string name="guide01">运动指导</string>
    <string name="lbs06">医院LBS</string>
    <string name="medication02">复诊拿药</string>
    <string name="message08">我的消息</string>
    <string name="my_record09">我的病历</string>
    <string name="registered04">快速挂号</string>
    <string name="visit05">医生上门</string>
    <string name="title_activity_loading">LoadingActivity</string>
    <string name="self_take">自提</string>
    <string name="post_way">送货方式</string>
    <string name="express">快递</string>
    <string name="indent_confirm">订单确定</string>
    <string name="hospital_address">医院地址</string>
    <string name="contacts">联系人:</string>
    <string name="phone">联系电话:</string>
    <string name="receiving_address">收货地址:</string>
    <string name="total">合计:</string>
    <string name="medicine">药品</string>
    <string name="medicine_introduced">药品简介</string>
    <string name="price_count">单价/数量:</string>
    <string name="subtotal">小计:</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="tv_case_history_details_title">记录详情</string>
    <string name="tv_case_history_details_doc">科室/医生：</string>
    <string name="tv_case_history_details_contents">内容：</string>
    <string name="tv_case_history_details_history">过去史：</string>
    <string name="tv_case_history_details_history2">过敏史：</string>
    <string name="tv_case_history_details_new">现病史：</string>
    <string name="tv_case_history_details_examination">体检：</string>
    <string name="tv_evaluate_name">姓名：李兰\n医生：陈兰</string>
    <string name="find_test">测试</string>
    <string name="find_game">小游戏</string>
    <string name="tv_evaluate_conment">就诊评价</string>
    <string name="et_evaluate_conment">说的蛮仔细的，指导很到位</string>
    <string name="bt_submit">提交</string>
    <string name="title_activity_dv_patment">预约成功</string>
    <string name="tv_dv_payment_money">100元</string>
    <string name="title_activity_dv_submit_subsucceed">医生上门</string>
    <string name="tv_doctor_visit">发起预约，组建3人以上，即可预约成功</string>
    <string name="bt_doctor_visit_make">我要发起预约</string>
    <string name="tv_dv_payment_top">请先支付手续费，具体上门就诊时间等待医生安排。</string>
    <string name="bt_dv_payment_pay">支付</string>
    <string name="tv_dv_subsucceed_name">李兰</string>
    <string name="tv_dv_subsucceed_address">青羊区朝阳路</string>
    <string name="tv_dv_subsucceed_phone">联系电话：</string>
    <string name="tv_case_history_class">骨科门诊</string>
    <string name="tv_case_history_doc">主治医师：李志斌</string>
    <string name="tv_case_history_time">就诊日期：2015-09-01</string>
    <string name="tv_dv_subsucceed_message">预约成功！预约时间为2015-08-27 18:33:03左右，请保持电话畅通，医生会及时联系您！</string>
    <string name="tv_look_over_top">需3人以上，统一时间地点，安排医生上门指导</string>
    <string name="tv_look_over_name">张兰\n张兰\n张兰</string>
    <string name="bt_particpation_disjoin">取消参与</string>
    <string name="bt_particpation_orderloading">预约发起中………</string>
    <string name="bt_make_activity_chose">选择就诊地点</string>
    <string name="bt_make_activity_chose_details">选择就诊人</string>
    <string name="bt_make_activity_address">青羊区\n美佳力健身房</string>
    <string name="bt_make_activity_details">张三    28   男       123-1230-1230\n症状：骨折，发烧，疼痛</string>
    <string name="bt_make_activity_sendorder">发起预约</string>
    <string name="CB_make_activity">允许其他人参加</string>
    <string name="bt_particpation_join">参与</string>
    <string name="tv_gm__submit_succeed_name">姓名：张科   36岁   男\n联系电话：159********</string>
    <string name="tv_gm__submit_succeed_title">姓名：张三\n级别：副主任医师</string>
    <string name="tv_gm__submit_dialogue">医生问诊</string>
    <string name="lr_chose_people_detailes_name">姓名：</string>
    <string name="lr_chose_people_detailes_age">年龄：</string>
    <string name="lr_chose_people_detailes_phone">联系电话：</string>
    <string name="lr_chose_people_detailes_sex">性别：</string>
    <string name="lr_chose_people_detailes_sex_bo">男</string>
    <string name="lr_chose_people_detailes_sex_gr">女</string>
    <string name="ed_chose_people_detailes_deta">症状描述</string>
    <string name="bt_chose_people_detailes_deta_sum">确认提交</string>
    <string name="bt_chose_address">+新增地址</string>
    <string name="bt_chose_address_save">保存</string>
    <string name="et_chose_address_deta_hint">请输入详细地址</string>
    <string name="title_activity_dv__chose_address_detailes">Dv_ChoseAddressDetailesActivity</string>
    <string name="center_introduce">治未病中心介绍</string>
    <string name="doctor_introduce">医生介绍</string>
    <string name="coach_introduce">教练介绍：</string>
    <string name="course_introduce">治疗科目介绍</string>
    <string name="item_dv_choseaddress">四川省成都市青羊区\n家园南街12号蓝钻会所</string>
    <string name="title_activity_my">MyActivity</string>
    <string name="orderDetails">订单详情</string>
    <string name="myAccounts">我的账号</string>
    <string name="myAddress">常用地址</string>
    <string name="create_time">创建时间:</string>
    <string name="case_introduced">病情介绍：</string>
    <string name="name">名字：</string>
    <string name="cancel">取消</string>
    <string name="start">开始</string>
    <string name="complete">完成</string>
    <string name="reason">失败原因：</string>
    <string name="unifiedorder_v3_wx">APP支付生成预支付订单</string>
    <string name="pay__pre_by_wxap">生成APP微信支付参数</string>
    <string name="pay_by_wxap">调起微信支付</string>
</resources>