<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.huiyuan.networkhospital.weixinpay.PayActivity" >

    <Button
        android:id="@+id/unifiedorder_btn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/unifiedorder_v3_wx" />

    <Button
        android:id="@+id/appay_pre_btn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_below="@+id/unifiedorder_btn"
        android:text="@string/pay__pre_by_wxap" />

    <Button
        android:id="@+id/appay_btn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_below="@+id/appay_pre_btn"
        android:text="@string/pay_by_wxap" />

    <TextView
        android:id="@+id/editText_prepay_id"
        android:layout_width="match_parent"
        android:layout_height="match_parent" 
        android:layout_below="@+id/appay_btn"/>

</RelativeLayout>