<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f7f7f7"
    tools:context="com.huiyuan.networkhospital.module.main.registration.activity.RegistrationActivity" >

    <RelativeLayout
        android:id="@+id/rlytTitle"
        android:layout_width="fill_parent"
        android:layout_height="46dp"
        android:background="#74bfe6" >

        <ImageButton
            android:id="@+id/ibtnBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:background="@null"
            android:src="@drawable/ic_back22x40px" />

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/registrationTitle"
            android:textColor="#ffffff"
            android:textSize="18sp" />
    </RelativeLayout>

    <TextView
        android:id="@+id/tvHintTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/rlytTitle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:textColor="#3b3b3b"
        android:textSize="18sp"
        android:text="@string/registrationHintTitle" 
        />

    <TextView
        android:id="@+id/tvHint"
        android:layout_width="215dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvHintTitle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:textColor="#919191"
        android:textSize="10sp"
        android:gravity="center_horizontal"
        android:text="@string/registrationHintContext" 
        />
   <Button 
       android:id="@+id/btDepartment"
          android:layout_width="290dp"
        android:layout_height="40dp"
        android:layout_below="@id/tvHint"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:textColor="#3b3b3b"
        android:textSize="15sp"
        android:text="@string/departmentChoose" 
        android:background="@drawable/bg_white_circle"
       />
      <Button 
       android:id="@+id/btDoctor"
          android:layout_width="290dp"
        android:layout_height="40dp"
        android:layout_below="@id/btDepartment"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:textColor="#3b3b3b"
        android:textSize="15sp"
        android:text="@string/doctor" 
        android:background="@drawable/bg_white_circle"
       />

</RelativeLayout>