<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_white_gray_straight"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/tv_item_r_myorder4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/tv_item_r_myorder1"
        android:textColor="#7d7d7d"
        android:layout_marginRight="8dp"
        android:textSize="10sp" />

    <TextView
        android:id="@+id/tv_item_r_myorder1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:text="@string/tv_item_r_myorder1"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/tv_item_r_myorder3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/tv_item_r_myorder1"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="3dp"
        android:text="@string/tv_item_r_myorder3"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/tv_item_r_myorder2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/tv_item_r_myorder3"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="3dp"
        android:text="@string/tv_item_r_myorder2"
        android:textColor="#298BC0"
        android:textSize="13sp" />

    <TextView
        android:id="@+id/tvReason"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="3dp"
        android:layout_below="@+id/tv_item_r_myorder2"
        android:textColor="#FF0000"
        android:visibility="gone"
        android:text="@string/reason" 
        />

</RelativeLayout>