<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f7f7f7"
    tools:context="com.huiyuan.networkhospital.module.main.doctor_visit.activity.LookOverActivity" >

    <RelativeLayout
        android:id="@+id/rl_dv_subsucceed_top"
        android:layout_width="fill_parent"
        android:layout_height="46dp"
        android:background="#74BFE6" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/title_activity_dv_submit_subsucceed"
            android:textColor="#ffffff"
            android:textSize="18sp" />

        <ImageButton
            android:id="@+id/imbt_dv_subsucceed_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:background="@null"
            android:src="@drawable/ic_back22x40px" />
    </RelativeLayout>

    <TextView
        android:id="@+id/tv_dv_subsucceed_name"
        android:layout_width="290dp"
        android:layout_height="115dp"
        android:layout_below="@id/rl_dv_subsucceed_top"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="43dp"
        android:background="@drawable/bg_gray_circle"
        android:paddingLeft="9dp"
        android:paddingTop="10dp"
        android:text="@string/tv_dv_subsucceed_name" />

    <TextView
        android:id="@+id/tv_dv_subsucceed_address"
        android:layout_width="290dp"
        android:layout_height="40dp"
        android:layout_below="@id/tv_dv_subsucceed_name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_white_circle"
        android:gravity="center"
        android:text="@string/tv_dv_subsucceed_address"
        android:textSize="13sp" />

    <TextView
        android:id="@+id/tv_dv_subsucceed_phone"
        android:layout_width="290dp"
        android:layout_height="40dp"
        android:layout_below="@id/tv_dv_subsucceed_address"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_white_circle"
        android:gravity="center"
        android:text="@string/tv_dv_subsucceed_phone"
        android:textSize="13sp" />

    <TextView
        android:id="@+id/tv_dv_subsucceed_message"
        android:layout_width="290dp"
        android:layout_height="100dp"
        android:layout_alignLeft="@id/tv_dv_subsucceed_phone"
        android:layout_below="@id/tv_dv_subsucceed_phone"
        android:layout_marginTop="81dp"
        android:background="@drawable/bg_white_circle"
        android:text="@string/tv_dv_subsucceed_message"
        android:paddingLeft="10dp"
        android:paddingTop="12dp"
        android:textSize="10sp" />

</RelativeLayout>