<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <SurfaceView
        android:id="@+id/surfaceView"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >
    </SurfaceView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@android:color/transparent"
        android:gravity="center_horizontal" >

        <Button
            android:id="@+id/video_record_cancle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginRight="20dp"
            android:background="@android:color/holo_blue_light"
            android:text="@string/cancel"
            android:visibility="gone"
            />

        <CheckBox
            android:id="@+id/start_or_stop"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginBottom="20dp"
            android:background="@android:color/holo_red_light"
            android:button="@null"
            android:gravity="center"
            android:text="@string/start" />

        <Button
            android:id="@+id/video_record_sure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="20dp"
            android:background="@android:color/holo_green_light"
            android:text="@string/complete"
            android:visibility="gone"
            />
    </LinearLayout>

</FrameLayout>